AC_INIT([uuid],[master])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([foreign])
AM_MAINTAINER_MODE

AC_CONFIG_HEADER([config.h])

BT_PROG_XCODE
AC_PROG_CC([clang gcc c99 cc])
AC_PROG_CC_C99
AC_HEADER_STDC
AC_PROG_LIBTOOL

BT_PROG_CC_WARN
BT_BUILD_DOCS
BT_ENABLE_NLS

BT_REQUIRE_LIBUUID

AC_CONFIG_FILES([Makefile
m4/Makefile
])

AC_OUTPUT
